--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -22572,7 +22572,7 @@ label,
 }
 
 .bg-gradient-primary {
-  background-image: linear-gradient(195deg, #483285 0%, #483285 100%);
+  background-image: linear-gradient(195deg, #009b9d 0%, #009b9d 100%);
 }
 
 .bg-gradient-secondary {
